--- a/GameBeta/style.css
+++ b/GameBeta/style.css
@@ -28,5 +28,19 @@ div {
 
 #canvas {
   margin-left: 2%;
- background-color:green;
+ background-color:red;
+ animation: mymove 10s infinite;
 }
+<style> 
+#myDIV {
+  width: 300px;
+  height: 200px;
+  background: red;
+  animation: mymove 5s infinite;
+}
+
+@keyframes mymove {
+  from {background-color: red;}
+  to {background-color: blue;}
+}
+</style>
