--- a/PROTOTYPE/style.css
+++ b/PROTOTYPE/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background: #f2f2f2;
+  background: black;
 }
 
 canvas {
@@ -17,7 +17,7 @@ canvas {
 p, a {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 19px;
-  color: #777;
+  color: red;
   display: block;
   width: 400px;
   margin: 0 auto;
@@ -29,7 +29,7 @@ p, a {
   margin:14px auto;
   text-align: justify;
   font-size: 18px;
-  color: #999;
+  color: red;
 }
 button {
   font-size: 40px;
