--- a/PROTOTYPE/style.css
+++ b/PROTOTYPE/style.css
@@ -56,5 +56,14 @@ a {
 }
 #music{
   background-color: #42f578;
+  float: left;
+  
 }
 
+.text-center {
+  text-align: center;
+}
+h1 {
+  margin: 0;
+    display: inline-block;
+}
