Ui fix + Start Expanded

--- a/PROTOTYPE/style.css
+++ b/PROTOTYPE/style.css
@@ -34,11 +34,29 @@ p, a {
   color: red;
 }
 button {
-  font-size: 40px;
+  font-size: 35px;
   font-family: Impact;
   border: 2px solid black;
   margin-top: 50px;
+  border-radius: 10px;
+  padding: 10px;
+  height: 100px; 
+width: 200px;
 }
+    .small-btn {
+        width: 50px;
+        height: 25px;
+    }
+    
+    .medium-btn {
+        width: 70px;
+        height: 30px;
+    }
+    
+    .big-btn {
+        width: 90px;
+        height: 40px;
+    }
 
 button:hover {
   background-color: red;
